--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
     "daisyui": "^3.9.2",
-    "nuxt": "^3.7.4",
+    "nuxt": "^3.17.3",
     "nuxt-icon": "^0.5.0"
   },
   "dependencies": {
@@ -40,7 +40,5 @@
     "vue-tel-input": "^8.1.4",
     "zod": "^3.22.2"
   },
-  "overrides": {
-    "vue": "latest"
-  }
+  "overrides": {}
 }
