--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nuxt-icon": "^0.5.0"
   },
   "dependencies": {
+    "@nuxt/image": "^1.10.0",
     "@nuxt/image-edge": "^1.3.0-28493895.369b747",
     "@nuxtjs/i18n": "^8.0.0-rc.4",
     "@pinia/nuxt": "^0.4.11",
